Refactor: Classes => lib/

--- a/Dust/Dust.csproj
+++ b/Dust/Dust.csproj
@@ -45,7 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Core\EarlPart.cs" />
+    <Compile Include="Core\SignatureBaseString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
