About concatenating request elements, the HTTP request method must be uppercase

--- a/Wiki.Machinery/Wiki.Machinery.csproj
+++ b/Wiki.Machinery/Wiki.Machinery.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RequestElementCollectionFixture.cs" />
+    <Compile Include="SignatureBaseStringExtensions.cs" />
     <Compile Include="SignatureBaseStringFlowFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
