--- a/Dust/Dust.csproj
+++ b/Dust/Dust.csproj
@@ -66,14 +66,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\EarlPart.cs" />
-    <Compile Include="Core\Parameter.cs" />
-    <Compile Include="Core\ParameterComparison.cs" />
-    <Compile Include="Core\ParameterPart.cs" />
-    <Compile Include="Core\Parameters.cs" />
-    <Compile Include="Core\QueryString.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\ConsumerKey.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\EarlPart.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\OAuthParameters.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\Parameter.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\ParameterComparison.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\ParameterPart.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\Parameters.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\QueryString.cs" />
     <Compile Include="Core\SignatureBaseString.cs" />
-    <Compile Include="Core\UrlEncoding.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\UrlEncoding.cs" />
     <Compile Include="Lang\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
