ConcatenatingRequestElements, It includes oauth_token

--- a/Dust/Dust.csproj
+++ b/Dust/Dust.csproj
@@ -51,6 +51,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="fitSharp">
+      <HintPath>..\lib\fitSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
