--- a/Dust/Dust.csproj
+++ b/Dust/Dust.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Core\SignatureBaseStringParts\Parameters\QueryString.cs" />
     <Compile Include="Core\SignatureBaseString.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\ParameterEncoding.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\Verb\VerbPart.cs" />
     <Compile Include="TokenKey.cs" />
     <Compile Include="Lang\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
