[DIRTY GREEN] Can generate HTTP Authorization header

--- a/Wiki.Machinery/Wiki.Machinery.csproj
+++ b/Wiki.Machinery/Wiki.Machinery.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorizationHeaderFlowFixture.cs" />
     <Compile Include="HmacSigningFlowFixture.cs" />
     <Compile Include="OAuthParameterCollectingFixture.cs" />
     <Compile Include="RequestElementCollectionFixture.cs" />
