Refactor: cut out middleman. Recast QueryString as RequestParameters so you no longer need to ask QueryString for Parameter. QueryString felt a bit like a procedure for finding parameters from a request.

--- a/Dust/Dust.csproj
+++ b/Dust/Dust.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Core\SignatureBaseStringParts\Parameters\ParameterComparison.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\ParameterPart.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\Parameters.cs" />
-    <Compile Include="Core\SignatureBaseStringParts\Parameters\QueryString.cs" />
+    <Compile Include="Core\SignatureBaseStringParts\Parameters\RequestParameters.cs" />
     <Compile Include="Core\SignatureBaseString.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\ParameterEncoding.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Verb\VerbPart.cs" />
