Changed the default config file so it makes sense and fails good

--- a/Wiki.Machinery/Wiki.Machinery.csproj
+++ b/Wiki.Machinery/Wiki.Machinery.csproj
@@ -106,6 +106,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.example.config" />
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
