--- a/Wiki.Machinery/Wiki.Machinery.csproj
+++ b/Wiki.Machinery/Wiki.Machinery.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Examples\Settings.cs" />
     <Compile Include="Examples\TwitterConnectionFlowFixture.cs" />
+    <Compile Include="Examples\XeroConnectionFlowFixture.cs" />
     <Compile Include="Http\AuthorizationHeaderExtensions.cs" />
     <Compile Include="Http\AuthorizationHeaderFlowFixture.cs" />
     <Compile Include="Signing\HmacSigningFlowFixture.cs" />
