[DIRTY GREEN] Can connect to Xero as private application

--- a/Dust/Dust.csproj
+++ b/Dust/Dust.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Request.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\Nonce\DefaultNonceSequence.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\Nonce\DefaultTimestampSequence.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Parameters\Nonce\NonceSequence.cs" />
@@ -86,6 +87,7 @@
     <Compile Include="Core\SignatureBaseStringParts\Parameters\ParameterEncoding.cs" />
     <Compile Include="Core\SignatureBaseStringParts\Verb\VerbPart.cs" />
     <Compile Include="Http\AuthorizationHeader.cs" />
+    <Compile Include="RsaSha1.cs" />
     <Compile Include="TokenKey.cs" />
     <Compile Include="Lang\ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
